--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/stimulus-bundle": "^2.31",
         "symfony/string": "7.3.*",
         "symfony/translation": "7.3.*",
+        "symfony/twig-bridge": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
         "symfony/ux-turbo": "^2.31",
         "symfony/validator": "7.3.*",
